--- a/messageforums-component-impl/pom.xml
+++ b/messageforums-component-impl/pom.xml
@@ -84,58 +84,61 @@
       <groupId>org.sakaiproject</groupId>
       <artifactId>sakai-gradebook-service-api</artifactId>
     </dependency>
-    <dependency>
-      <groupId>commons-beanutils</groupId>
-      <artifactId>commons-beanutils</artifactId>
-      <version>1.7.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.sakaiproject</groupId>
-      <artifactId>sakai-common-type-api</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.sakaiproject</groupId>
-      <artifactId>sakai-common-manager-api</artifactId>
-    </dependency>
-<!--${sakai.hibernate.groupId}${sakai.hibernate.artifactId}${sakai.hibernate.version}-->
-<!--${sakai.spring.groupId}${sakai.spring.artifactId}${sakai.spring.version}-->
-    <dependency>
-      <groupId>commons-logging</groupId>
-      <artifactId>commons-logging</artifactId>
-      <version>1.0.4</version>
-    </dependency>
-    <dependency>
-      <groupId>commons-codec</groupId>
-      <artifactId>commons-codec</artifactId>
-      <version>1.3</version>
-    </dependency>
-<!-- these are here because they are packed in the M1 build... but are they really required, it compiles without them -->
-<!--org.sakaiprojectsakai-event-util${sakai.version}-->
-<!--org.sakaiprojectsakai-entity-util${sakai.version}-->
+      <dependency>
+          <groupId>commons-beanutils</groupId>
+          <artifactId>commons-beanutils</artifactId>
+          <version>1.7.0</version>
+      </dependency>
+      <dependency>
+          <groupId>org.sakaiproject</groupId>
+          <artifactId>sakai-common-type-api</artifactId>
+      </dependency>
+      <dependency>
+          <groupId>org.sakaiproject</groupId>
+          <artifactId>sakai-common-manager-api</artifactId>
+      </dependency>
+      <!--${sakai.hibernate.groupId}${sakai.hibernate.artifactId}${sakai.hibernate.version}-->
+      <!--${sakai.spring.groupId}${sakai.spring.artifactId}${sakai.spring.version}-->
+      <dependency>
+          <groupId>commons-codec</groupId>
+          <artifactId>commons-codec</artifactId>
+          <version>1.3</version>
+      </dependency>
+      <dependency>
+          <groupId>org.sakaiproject.entitybroker</groupId>
+          <artifactId>entitybroker-api</artifactId>
+      </dependency>
+      <dependency>
+          <groupId>org.sakaiproject.entitybroker</groupId>
+          <artifactId>entitybroker-utils</artifactId>
+      </dependency>
+      <!-- these are here because they are packed in the M1 build... but are they really required, it compiles without them -->
+      <!--org.sakaiprojectsakai-event-util${sakai.version}-->
+      <!--org.sakaiprojectsakai-entity-util${sakai.version}-->
   </dependencies>
-  <build>
-    <resources>
-      <resource>
-        <directory>${basedir}/src/sql</directory>
-        <includes>
-          <include>**/*.sql</include>
-        </includes>
-      </resource>
-      <resource>
-        <directory>${basedir}/src/bundle</directory>
-        <includes>
-          <include>**/*.properties</include>
-        </includes>
-      </resource>
-      <resource>
-        <directory>src/java</directory>
-        <includes>
-          <include>**/*.xml</include>
-        </includes>
-        <excludes>
-          <exclude>**/web.xml</exclude>
-        </excludes>
-      </resource>
-    </resources>
-  </build>
+    <build>
+        <resources>
+            <resource>
+                <directory>${basedir}/src/sql</directory>
+                <includes>
+                    <include>**/*.sql</include>
+                </includes>
+            </resource>
+            <resource>
+                <directory>${basedir}/src/bundle</directory>
+                <includes>
+                    <include>**/*.properties</include>
+                </includes>
+            </resource>
+            <resource>
+                <directory>src/java</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                </includes>
+                <excludes>
+                    <exclude>**/web.xml</exclude>
+                </excludes>
+            </resource>
+        </resources>
+    </build>
 </project>
