--- a/messageforums-component-impl/.project
+++ b/messageforums-component-impl/.project
@@ -2,6 +2,7 @@
   <name>sakai-messageforums-component-impl</name>
   <comment/>
   <projects>
+    <project>entitybroker-api</project>
     <project>sakai-common-manager-api</project>
     <project>sakai-common-type-api</project>
     <project>sakai-gradebook-service-api</project>
