--- a/messageforums-hbm/.project
+++ b/messageforums-hbm/.project
@@ -1,15 +1,24 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-  <name>sakai-messageforums-hbm</name>
-  <comment/>
-  <projects>
-    <project>sakai-messageforums-api</project>
-  </projects>
-  <buildSpec>
-    <buildCommand>
-      <name>org.eclipse.jdt.core.javabuilder</name>
-    </buildCommand>
-  </buildSpec>
-  <natures>
-    <nature>org.eclipse.jdt.core.javanature</nature>
-  </natures>
+	<name>sakai-messageforums-hbm</name>
+	<comment></comment>
+	<projects>
+		<project>sakai-messageforums-api</project>
+	</projects>
+	<buildSpec>
+		<buildCommand>
+			<name>org.eclipse.jdt.core.javabuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
+			<name>edu.umd.cs.findbugs.plugin.eclipse.findbugsBuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+	</buildSpec>
+	<natures>
+		<nature>org.eclipse.jdt.core.javanature</nature>
+		<nature>edu.umd.cs.findbugs.plugin.eclipse.findbugsNature</nature>
+	</natures>
 </projectDescription>
