--- a/pom.xml
+++ b/pom.xml
@@ -52,5 +52,27 @@
         <type>pom</type>
       </dependency>
     </dependencies>
-  </dependencyManagement>
+  </dependencyManagement
+>	<distributionManagement>
+	  <downloadUrl>http://source.sakaiproject.org/maven2/</downloadUrl>
+		<snapshotRepository>
+			<uniqueVersion>false</uniqueVersion>
+			<id>sakai-maven-snapshots</id>
+			<name>Sakai snapshot Repo</name>
+			<url>dav:http://source.sakaiproject.org/maven2-snapshots</url>
+			<layout>default</layout>
+		</snapshotRepository>
+		<repository>
+			<uniqueVersion>false</uniqueVersion>
+			<id>sakai-maven2</id>
+			<name>Sakai maven2 repository</name>
+			<url>dav:https://source.sakaiproject.org/maven2</url>
+			<layout>default</layout>
+		</repository>
+		<site>
+			<id>sakai-site</id>
+			<name>Sakai release Site</name>
+			<url>${url.localsite}</url>
+		</site>
+	</distributionManagement>
 </project>
