--- a/messageforums-assembly/pom.xml
+++ b/messageforums-assembly/pom.xml
@@ -26,6 +26,12 @@
 				<version>${project.version}</version>
 				<scope>compile</scope>
 			</dependency>
+                        <dependency>
+				<groupId>org.sakaiproject.msgcntr</groupId>
+				<artifactId>sakai-messageforums-hbm</artifactId>
+				<version>${project.version}</version>
+				<scope>compile</scope>
+			</dependency>
 			<dependency>
 				<groupId>org.sakaiproject.msgcntr</groupId>
 				<artifactId>sakai-messageforums-components</artifactId>
