--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <artifactId>base</artifactId>
-    <groupId>org.sakaiproject</groupId>
+    <artifactId>sakai-standard-tool</artifactId>
+    <groupId>org.sakaiproject.purepoms</groupId>
     <version>2.7.0-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
-  </parent>
+   </parent>
   <name>Sakai Message Center Project</name>
   <groupId>org.sakaiproject</groupId>
   <artifactId>msgcntr</artifactId>
@@ -45,15 +44,46 @@
         <version>1.5-SNAPSHOT</version>
         <scope>provided</scope>
       </dependency>
-      <dependency>
-        <groupId>org.sakaiproject</groupId>
-        <artifactId>sakai-jsf-sun-ri-tool</artifactId>
-        <version>2.7.0-SNAPSHOT</version>
-        <type>pom</type>
-      </dependency>
+	<dependency>
+		<groupId>org.sakaiproject</groupId>
+		<artifactId>sakai-jsf-sun-ri-tool</artifactId>
+		<version>2.7.0-SNAPSHOT</version>
+		<type>pom</type>
+	</dependency>
+	<!-- as we no longer depend on master -->
+	<dependency>
+		<groupId>org.sakaiproject</groupId>
+		<artifactId>sakai-gradebook-service-api</artifactId>
+		<version>2.7.0-SNAPSHOT</version>
+		<scope>provided</scope>
+	</dependency>
+	<dependency>
+		<groupId>org.sakaiproject</groupId>
+		<artifactId>sakai-search-api</artifactId>
+		<version>2.7.0-SNAPSHOT</version>
+		<scope>provided</scope>
+	</dependency>
+	<dependency>
+		<groupId>org.sakaiproject</groupId>
+		<artifactId>sakai-privacy-api</artifactId>
+		<version>2.7.0-SNAPSHOT</version>
+		<scope>provided</scope>
+	</dependency>
+	<dependency>
+		<groupId>org.sakaiproject</groupId>
+		<artifactId>sakai-common-type-api</artifactId>
+		<version>2.7.0-SNAPSHOT</version>
+		<scope>provided</scope>
+	</dependency>
+	<dependency>
+		<groupId>org.sakaiproject</groupId>
+		<artifactId>sakai-common-manager-api</artifactId>
+		<version>2.7.0-SNAPSHOT</version>
+		<scope>provided</scope>
+	</dependency>
     </dependencies>
-  </dependencyManagement
->	<distributionManagement>
+  </dependencyManagement>	
+  <distributionManagement>
 	  <downloadUrl>http://source.sakaiproject.org/maven2/</downloadUrl>
 		<snapshotRepository>
 			<uniqueVersion>false</uniqueVersion>
@@ -75,4 +105,26 @@
 			<url>${url.localsite}</url>
 		</site>
 	</distributionManagement>
+		<repositories>
+		<repository>
+			<id>sakai-maven</id>
+			<name>Sakai Maven Repo</name>
+			<layout>default</layout>
+			<url>http://source.sakaiproject.org/maven2
+			</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+		<repository>
+			<id>sakai-maven2-snapshots</id>
+			<name>Sakai Maven Repo</name>
+			<layout>default</layout>
+			<url>http://source.sakaiproject.org/maven2-snapshots
+			</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
 </project>
