--- a/messageforums-component-impl/.classpath
+++ b/messageforums-component-impl/.classpath
@@ -44,6 +44,7 @@
     </attributes>
   </classpathentry>
   <classpathentry kind="var" path="M2_REPO/junit/junit/3.8.1/junit-3.8.1.jar" sourcepath="M2_REPO/junit/junit/3.8.1/junit-3.8.1-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/quartz/quartz/1.5.2/quartz-1.5.2.jar" sourcepath="M2_REPO/quartz/quartz/1.5.2/quartz-1.5.2-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/sakaiproject/common/sakai-common-manager-api/1.0.0-beta02-SNAPSHOT/sakai-common-manager-api-1.0.0-beta02-SNAPSHOT.jar" sourcepath="M2_REPO/org/sakaiproject/common/sakai-common-manager-api/1.0.0-beta02-SNAPSHOT/sakai-common-manager-api-1.0.0-beta02-SNAPSHOT-sources.jar">
     <attributes>
       <attribute value="jar:file:/home/dhorwitz/.m2/repository/org/sakaiproject/common/sakai-common-manager-api/1.0.0-beta02-SNAPSHOT/sakai-common-manager-api-1.0.0-beta02-SNAPSHOT-javadoc.jar!/" name="javadoc_location"/>
