--- a/messageforums-components/pom.xml
+++ b/messageforums-components/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.sakaiproject.msgcntr</groupId>
     <artifactId>msgcntr</artifactId>
-    <version>2.7.0-SNAPSHOT</version>
+    <version>2.7.0-a01</version>
   </parent>
   <name>Sakai MessageForums Components</name>
   <groupId>org.sakaiproject.msgcntr</groupId>
