--- a/messageforums-app/src/webapp/WEB-INF/web.xml
+++ b/messageforums-app/src/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
     xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
  
-    <display-name>sakai-messageforums</display-name>
+    <display-name>messageforums</display-name>
     <description>Sakai Message Forums</description>
     <context-param>
         <param-name>javax.faces.STATE_SAVING_METHOD</param-name>
