--- a/messageforums-component-impl/pom.xml
+++ b/messageforums-component-impl/pom.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <name>sakai-messageforums-component-impl</name>
   <parent>
     <groupId>org.sakaiproject.msgcntr</groupId>
     <artifactId>msgcntr</artifactId>
     <version>2.8-SNAPSHOT</version>
   </parent>
+  <name>Sakai Message Forums Component Implementaiton</name>
   <groupId>org.sakaiproject.msgcntr</groupId>
   <artifactId>messageforums-component-impl</artifactId>
   <organization>
