--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
         <artifactId>sakai-standard-tool</artifactId>
         <version>2.7.0-build04</version>
     </parent>
-    <name>Sakai Message Center Project</name>
+    <name>Sakai Message Center Base POM</name>
     <groupId>org.sakaiproject.msgcntr</groupId>
     <version>2.8-SNAPSHOT</version>
     <artifactId>msgcntr</artifactId>
